fix height on iOS

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,9 +1,8 @@
 html, body, #map {
-  height: 100vh;
+  height: 100%;
   width: 100%;
   margin: 0px;
   padding: 0px;
-  overflow-x: hidden;
 }
 #map {
   background: white;
